--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,25 +13,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-30 Tue 10:42]
+#+CAPTION: Clock summary at [2019-04-30 Tue 11:11]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *54:49* |       |       | 100.0 |
+| *Total time*                                           | *55:14* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 54:49   |       |       | 100.0 |
-| Active                                                 |         | 54:49 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   4.9 |
+| Stories                                                | 55:14   |       |       | 100.0 |
+| Active                                                 |         | 55:14 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   4.8 |
 | Sprint and product backlog grooming                    |         |       |  2:59 |   5.4 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.5 |
 | Read variability papers                                |         |       |  1:04 |   1.9 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  19.7 |
+| Finish implementing the variability model              |         |       | 10:49 |  19.6 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.7 |
-| Read meta-data using configurations                    |         |       | 24:24 |  44.5 |
-| Remove uses of annotations                             |         |       |  7:44 |  14.1 |
+| Read meta-data using configurations                    |         |       | 24:24 |  44.2 |
+| Remove uses of annotations                             |         |       |  7:44 |  14.0 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  1:20 |   2.4 |
+| Profiles as meta-model elements                        |         |       |  1:45 |   3.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -442,9 +442,9 @@ Since we only need these during generation, seems like the more
 logical place. This should be done when (after) we move all of the
 meta-elements that live in formatter into coding.
 
-
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-30 Tue 10:46]--[2019-04-30 Tue 11:11] =>  0:25
     CLOCK: [2019-04-30 Tue 09:58]--[2019-04-30 Tue 10:07] =>  0:09
     CLOCK: [2019-04-29 Mon 18:10]--[2019-04-29 Mon 18:19] =>  0:09
     CLOCK: [2019-04-29 Mon 17:59]--[2019-04-29 Mon 18:09] =>  0:10
@@ -952,7 +952,7 @@ model. If we do create a single model, then "coding" is actually not
 the worse possible name (e.g. component + product = coding, the
 activity for creating products).
 
-*** Move fabric types into coding                           :story:
+*** Move fabric types into coding                                     :story:
 
 Fabric types need to be tidied up and moved into coding as regular
 meta-model elements. We need to try to make them as technical space
