--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,25 +13,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-30 Tue 11:11]
+#+CAPTION: Clock summary at [2019-04-30 Tue 12:08]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *55:14* |       |       | 100.0 |
+| *Total time*                                           | *56:10* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 55:14   |       |       | 100.0 |
-| Active                                                 |         | 55:14 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   4.8 |
-| Sprint and product backlog grooming                    |         |       |  2:59 |   5.4 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.5 |
+| Stories                                                | 56:10   |       |       | 100.0 |
+| Active                                                 |         | 56:10 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   4.7 |
+| Sprint and product backlog grooming                    |         |       |  2:59 |   5.3 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.4 |
 | Read variability papers                                |         |       |  1:04 |   1.9 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  19.6 |
+| Finish implementing the variability model              |         |       | 10:49 |  19.3 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.7 |
-| Read meta-data using configurations                    |         |       | 24:24 |  44.2 |
-| Remove uses of annotations                             |         |       |  7:44 |  14.0 |
+| Read meta-data using configurations                    |         |       | 24:24 |  43.4 |
+| Remove uses of annotations                             |         |       |  7:44 |  13.8 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  1:45 |   3.2 |
+| Profiles as meta-model elements                        |         |       |  2:41 |   4.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -444,6 +444,7 @@ meta-elements that live in formatter into coding.
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-30 Tue 11:12]--[2019-04-30 Tue 12:08] =>  0:56
     CLOCK: [2019-04-30 Tue 10:46]--[2019-04-30 Tue 11:11] =>  0:25
     CLOCK: [2019-04-30 Tue 09:58]--[2019-04-30 Tue 10:07] =>  0:09
     CLOCK: [2019-04-29 Mon 18:10]--[2019-04-29 Mon 18:19] =>  0:09
