--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,14 +13,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-30 Tue 18:38]
+#+CAPTION: Clock summary at [2019-04-30 Tue 18:43]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *59:56* |       |       | 100.0 |
+| *Total time*                                           | *60:00* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 59:56   |       |       | 100.0 |
-| Active                                                 |         | 59:56 |       | 100.0 |
+| Stories                                                | 60:00   |       |       | 100.0 |
+| Active                                                 |         | 60:00 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   4.4 |
 | Sprint and product backlog grooming                    |         |       |  2:59 |   5.0 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.2 |
@@ -31,7 +31,7 @@
 | Read meta-data using configurations                    |         |       | 24:24 |  40.7 |
 | Remove uses of annotations                             |         |       |  7:44 |  12.9 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  6:27 |  10.8 |
+| Profiles as meta-model elements                        |         |       |  6:31 |  10.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -444,6 +444,7 @@ meta-elements that live in formatter into coding.
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-30 Tue 18:39]--[2019-04-30 Tue 18:43] =>  0:04
     CLOCK: [2019-04-30 Tue 18:19]--[2019-04-30 Tue 18:38] =>  0:19
     CLOCK: [2019-04-30 Tue 16:19]--[2019-04-30 Tue 17:39] =>  1:20
     CLOCK: [2019-04-30 Tue 15:37]--[2019-04-30 Tue 16:18] =>  0:41
