--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,25 +13,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-30 Tue 18:49]
+#+CAPTION: Clock summary at [2019-05-01 Wed 11:39]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *60:05* |       |       | 100.0 |
+| *Total time*                                           | *61:45* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 60:05   |       |       | 100.0 |
-| Active                                                 |         | 60:05 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   4.4 |
-| Sprint and product backlog grooming                    |         |       |  2:59 |   5.0 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.2 |
-| Read variability papers                                |         |       |  1:04 |   1.8 |
-| Emacs maintenance and exploration work                 |         |       |  0:20 |   0.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  18.0 |
-| Trim down stitch's use of annotations                  |         |       |  1:30 |   2.5 |
-| Read meta-data using configurations                    |         |       | 24:24 |  40.6 |
-| Remove uses of annotations                             |         |       |  7:44 |  12.9 |
+| Stories                                                | 61:45   |       |       | 100.0 |
+| Active                                                 |         | 61:45 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   4.3 |
+| Sprint and product backlog grooming                    |         |       |  2:59 |   4.8 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.1 |
+| Read variability papers                                |         |       |  1:04 |   1.7 |
+| Emacs maintenance and exploration work                 |         |       |  0:20 |   0.5 |
+| Finish implementing the variability model              |         |       | 10:49 |  17.5 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   2.4 |
+| Read meta-data using configurations                    |         |       | 24:24 |  39.5 |
+| Remove uses of annotations                             |         |       |  7:44 |  12.5 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  6:36 |  11.0 |
+| Profiles as meta-model elements                        |         |       |  8:16 |  13.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -444,6 +444,7 @@ meta-elements that live in formatter into coding.
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-01 Wed 09:59]--[2019-05-01 Wed 11:39] =>  1:40
     CLOCK: [2019-04-30 Tue 18:44]--[2019-04-30 Tue 18:49] =>  0:05
     CLOCK: [2019-04-30 Tue 18:39]--[2019-04-30 Tue 18:43] =>  0:04
     CLOCK: [2019-04-30 Tue 18:19]--[2019-04-30 Tue 18:38] =>  0:19
@@ -714,11 +715,14 @@ Notes:
 
 Mop-up tasks:
 
-- move test profiles into test projects using a top-level
-  model. Create separate ones for C++ and C#.
-- tidy-up profile names.
-- reference profiles by name rather than by label.
-- remove labels.
+- create a clean profile model for dogen. Get all models to use this
+  profile cleanly. Remove all profiles in masd that are dogen
+  specific. Tidy-up profile names.
+- Repeat the exercise for all test profiles. Create separate ones for
+  C++ and C#.
+- reference profiles by name rather than by label and remove
+  labels. Actually we do need labels. The profile names are just too
+  unwieldy. However, the right name is =alias=. Rename this property.
 
 *** Use of binding points in profiles                                 :story:
 
@@ -1065,6 +1069,21 @@ So, in conclusion, two use cases for wale templates:
 - user model wants to define a new formatter. It will make use of
   dogen profiles and wale templates. These must be in the future data
   directory somehow.
+
+Actually, the right thing to do is to make wale templates themselves
+model elements:
+
+- we may want to use a wale template in a different model. This is the
+  use case for when users want to create new formatters to add to an
+  existing backend.
+- we don't want to add additional regular expressions to ignore wale
+  templates; we've already seen how this is a bad idea (for example
+  with tests).
+- whilst adding templates to a model element is not ideal if the model
+  element is in dia or JSON, these are really limitations of the
+  injector format rather than of the idea itself. Ideally, we should
+  have an injector format that supports this use case (another use
+  case for developing a =org_uml= injector).
 
 *** Split wale out of stitch templates                                :story:
 
