--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,14 +13,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-01 Wed 16:31]
+#+CAPTION: Clock summary at [2019-05-01 Wed 16:35]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *65:22* |       |       | 100.0 |
+| *Total time*                                           | *65:26* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 65:22   |       |       | 100.0 |
-| Active                                                 |         | 65:22 |       | 100.0 |
+| Stories                                                | 65:26   |       |       | 100.0 |
+| Active                                                 |         | 65:26 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   4.1 |
 | Sprint and product backlog grooming                    |         |       |  2:59 |   4.6 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.9 |
@@ -32,7 +32,7 @@
 | Remove uses of annotations                             |         |       |  7:44 |  11.8 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Profiles as meta-model elements                        |         |       |  9:32 |  14.6 |
-| Exclude profiles from stereotypes processing           |         |       |  2:21 |   3.6 |
+| Exclude profiles from stereotypes processing           |         |       |  2:25 |   3.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -742,6 +742,7 @@ Mop-up tasks:
 
 *** STARTED Exclude profiles from stereotypes processing              :story:
     :LOGBOOK:
+    CLOCK: [2019-05-01 Wed 16:31]--[2019-05-01 Wed 16:35] =>  0:04
     CLOCK: [2019-05-01 Wed 14:33]--[2019-05-01 Wed 16:30] =>  1:57
     CLOCK: [2019-05-01 Wed 14:08]--[2019-05-01 Wed 14:32] =>  0:24
     :END:
