--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,26 +13,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-01 Wed 16:35]
+#+CAPTION: Clock summary at [2019-05-01 Wed 16:52]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *65:26* |       |       | 100.0 |
+| *Total time*                                           | *65:42* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 65:26   |       |       | 100.0 |
-| Active                                                 |         | 65:26 |       | 100.0 |
+| Stories                                                | 65:42   |       |       | 100.0 |
+| Active                                                 |         | 65:42 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   4.1 |
-| Sprint and product backlog grooming                    |         |       |  2:59 |   4.6 |
+| Sprint and product backlog grooming                    |         |       |  2:59 |   4.5 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.9 |
 | Read variability papers                                |         |       |  1:04 |   1.6 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.5 |
 | Finish implementing the variability model              |         |       | 10:49 |  16.5 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.3 |
-| Read meta-data using configurations                    |         |       | 24:24 |  37.3 |
+| Read meta-data using configurations                    |         |       | 24:24 |  37.1 |
 | Remove uses of annotations                             |         |       |  7:44 |  11.8 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  9:32 |  14.6 |
-| Exclude profiles from stereotypes processing           |         |       |  2:25 |   3.7 |
+| Exclude profiles from stereotypes processing           |         |       |  2:41 |   4.1 |
+| Profiles as meta-model elements                        |         |       |  9:32 |  14.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -453,6 +453,31 @@ Now that we are intercepting the dynamic stereotypes coming in from
 injection and directly populating the configuration, there is no need
 to store them in the modeling element.
 
+*** COMPLETED Exclude profiles from stereotypes processing            :story:
+    CLOSED: [2019-05-01 Wed 16:52]
+    :LOGBOOK:
+    CLOCK: [2019-05-01 Wed 16:36]--[2019-05-01 Wed 16:52] =>  0:16
+    CLOCK: [2019-05-01 Wed 16:31]--[2019-05-01 Wed 16:35] =>  0:04
+    CLOCK: [2019-05-01 Wed 14:33]--[2019-05-01 Wed 16:30] =>  1:57
+    CLOCK: [2019-05-01 Wed 14:08]--[2019-05-01 Wed 14:32] =>  0:24
+    :END:
+
+At present we are manually excluding profiles from the stereotypes
+transform. This was just a quick hack to get us going. We need to
+replace this with a call to annotations to get a list of profile names
+and exclude those.
+
+We should also rename =is_stereotype_handled_externally= to something
+more like "is profile" or "matches profile name".
+
+Actually the right thing may even be to just remove all of the profile
+stereotypes during annotations processing. However, we should wait
+until we complete the exomodel work since that will remove scribble
+groups, etc. Its all in the annotations transform.
+
+Once we have the profiles in the model set it should be easy to supply
+them to the annotations transform.
+
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
     CLOCK: [2019-05-01 Wed 13:32]--[2019-05-01 Wed 14:07] =>  0:35
@@ -739,29 +764,6 @@ Mop-up tasks:
 - reference profiles by name rather than by label and remove
   labels. Actually we do need labels. The profile names are just too
   unwieldy. However, the right name is =alias=. Rename this property.
-
-*** STARTED Exclude profiles from stereotypes processing              :story:
-    :LOGBOOK:
-    CLOCK: [2019-05-01 Wed 16:31]--[2019-05-01 Wed 16:35] =>  0:04
-    CLOCK: [2019-05-01 Wed 14:33]--[2019-05-01 Wed 16:30] =>  1:57
-    CLOCK: [2019-05-01 Wed 14:08]--[2019-05-01 Wed 14:32] =>  0:24
-    :END:
-
-At present we are manually excluding profiles from the stereotypes
-transform. This was just a quick hack to get us going. We need to
-replace this with a call to annotations to get a list of profile names
-and exclude those.
-
-We should also rename =is_stereotype_handled_externally= to something
-more like "is profile" or "matches profile name".
-
-Actually the right thing may even be to just remove all of the profile
-stereotypes during annotations processing. However, we should wait
-until we complete the exomodel work since that will remove scribble
-groups, etc. Its all in the annotations transform.
-
-Once we have the profiles in the model set it should be easy to supply
-them to the annotations transform.
 
 *** Use of binding points in profiles                                 :story:
 
