--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,27 +13,28 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-02 Thu 13:04]
+#+CAPTION: Clock summary at [2019-05-02 Thu 13:58]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *70:53* |       |       | 100.0 |
+| *Total time*                                           | *71:06* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 70:53   |       |       | 100.0 |
-| Active                                                 |         | 70:53 |       | 100.0 |
+| Stories                                                | 71:06   |       |       | 100.0 |
+| Active                                                 |         | 71:06 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   3.8 |
 | Sprint and product backlog grooming                    |         |       |  3:09 |   4.4 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   2.7 |
 | Read variability papers                                |         |       |  1:04 |   1.5 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.5 |
 | Fix issues with nightly build and CI                   |         |       |  0:39 |   0.9 |
-| Finish implementing the variability model              |         |       | 10:49 |  15.3 |
+| Finish implementing the variability model              |         |       | 10:49 |  15.2 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.1 |
-| Read meta-data using configurations                    |         |       | 24:24 |  34.4 |
+| Read meta-data using configurations                    |         |       | 24:24 |  34.3 |
 | Remove uses of annotations                             |         |       |  7:44 |  10.9 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Exclude profiles from stereotypes processing           |         |       |  2:41 |   3.8 |
-| Profiles as meta-model elements                        |         |       | 13:54 |  19.6 |
+| Profiles as meta-model elements                        |         |       | 13:54 |  19.5 |
+| Add support for composable stereotypes                 |         |       |  0:13 |   0.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -782,7 +783,10 @@ Mop-up tasks:
   labels. Actually we do need labels. The profile names are just too
   unwieldy. However, the right name is =alias=. Rename this property.
 
-*** Add support for composable stereotypes                            :story:
+*** STARTED Add support for composable stereotypes                    :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-02 Thu 13:45]--[2019-05-02 Thu 13:58] =>  0:13
+    :END:
 
 We need to be able to add more than one profile to an element. We have
 most of the parts needed for this now.
