--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -16,6 +16,36 @@ such as profiles, licences etc.
 
 Stories that we haven't quite classified yet, but are needed.
 
+*** Prefix =masd::= in stereotypes is misleading                      :story:
+
+At present we have stereotypes such as =masd::handcrafted::typeable=
+etc. However, the namespace =masd= in this context is not meant to
+imply these are defined inside the MASD public UML profile. In fact,
+should we really call dogen =masd::dogen=?
+
+Whilst dogen is an implementation of MASD, it is not inside the MASD
+namespace - in the sense that things defined in dogen are
+implementation specific. If we has simply =dogen=, we could then
+reserve the =masd= namespace for things that are actually in the MASD
+spec. Similarly for the reference models. The question is whether
+reference implementations should exist under the MASD umbrella or
+not. Say for example a third party implements the MASD spec; we
+wouldn't expect them to place it under the MASD namespace.
+
+In a somewhat similar vein, we have the =masd= model in library. This
+contains elements which are directly usable by end users (licences for
+example) and others which are less so - generation markers are more of
+an example rather than what we expect users to use. Modelines are
+somewhere in between.
+
+*** Come up with a name for models that contain "meta-elements        :story:
+
+At present we created a number of models called "profiles"; these have
+only the profiles for configuring specific products. However,
+conceivably we want them to also store the generation markers and
+possibly licences, modelines, etc. Basically all of the shared
+meta-infrastructure. We need a name that reflects this.
+
 *** Detect non-configurable fields                                    :story:
 
 Some stereotypes cannot be placed in a configuration. Placing them
